--- a/chat/index.html
+++ b/chat/index.html
@@ -40,22 +40,30 @@
         </div>
     </nav>
 
-
     <main>
         <article class="work-article padding-bottom-40">
             <h2>Introduction</h2>
             <p class="work-text">
-                Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.
-                <br/>
-                <br/> The chat module was released in August for the latest version of Snapp and 39% of users updated on the first release and had the feature. It enables passengers to chat directly with drivers. In the design, as shown below, I have
-                placed it beside the Call button. The reason behind it was that both of them are for contacting the driver so they should be next to each other.
+                Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.<br/>
+                The chat module was released in August 2020 for the latest version of Snapp. It enables passengers to chat directly with drivers. In the design, as shown below, I have placed it beside the Call button. The reason behind it was that both of them are for contacting the driver so they should be next to each other.
             </p>
             <div class="work-image-normal">
                 <img src="../assets/chat/old-chat.png" alt="Old Chat" />
             </div>
             <div class="subtitle">The first version of Chat Module in Snapp</div>
         </article>
+
         <div class="back-gray">
+            <article class="work-article">
+                <h2>My Role</h2>
+                <p class="work-text">
+                    By selecting two segments of our users, I developed a questionnaire that our Call Center would ask of each group. I revised and modified the designs based on feedback and insights.<br/>
+                    In addition, I worked alongside a UX Writer, 2 Product Managers, Client Developers, Data Scientists, and our Call Center members.
+                </p>
+            </article>
+        </div>
+
+        <div class="back-white">
             <article class="work-article">
                 <h2>Problem Statement</h2>
                 <p class="work-text">After rolling out the feature, the analysis showed that the usage of chat in the Passenger app was about 4%. While on the Driver side it was 8%. It was evident that drivers are using chat more than passengers, and passengers may not even
@@ -66,27 +74,7 @@
                 <img src="../assets/chat/funnel.png" alt="Problem Icon" />
             </div>
         </div>
-        <div class="back-white padding-bottom-0">
-            <article class="work-article">
-                <h2>Survey Result</h2>
-                <p class="work-text-normal">
-                    A survey was run to see how satisfied the passengers and drivers were with this feature. The result showed that the problem wasn’t the design and we had to find the bottleneck.
-                </p>
-            </article>
-            <div class="work-image">
-                <img src="../assets/chat/group-44.png" alt="Problem Icon" />
-            </div>
-        </div>
-        <div class="back-white padding-bottom-40">
-            <article class="work-article">
-                <h2>Predefined Messages</h2>
-                <p class="work-text-normal">Another problem we had, was the low usage of the predefined messages. It seemed that Driver’s predefined messages are more effective than Passenger’s since they preferred to type the messages themselves.
-                </p>
-            </article>
-            <div class="work-image">
-                <img src="../assets/chat/predefind.png" alt="Problem Icon" />
-            </div>
-        </div>
+
         <div class="back-black padding-bottom-54">
             <article class="work-article">
                 <h2>Solution</h2>
@@ -109,7 +97,7 @@
             </article>
         </div>
 
-        <div class="back-gray padding-bottom-49">
+        <div class="back-white padding-bottom-49">
             <article class="work-article">
                 <h2>Key Results of the Survey</h2>
                 <ol class="work-text-normal">
@@ -122,10 +110,23 @@
             </article>
         </div>
 
+        <div class="back-gray padding-bottom-40">
+            <article class="work-article">
+                <h2>Exploration</h2>
+                <p class="work-text-normal">
+                    The most important thing was to make chat more visible to our users. Here are some iterations for doing that:
+                </p>
+            </article>
+            <div class="work-image">
+                <img src="../assets/chat/predefind.png" alt="Problem Icon" />
+            </div>
+        </div>
+
         <div class="back-white padding-0">
             <article class="work-article">
                 <h2>Designs</h2>
-                <p class="work-text-normal">After analyzing the results of the survey, the key actions we had to do became clear. I designed a solution for everything the users needed.
+                <p class="work-text-normal">
+                    After analyzing the results of the survey, the key actions we had to do became clear. I designed a solution for everything the users needed.
                 </p>
             </article>
             <div class="work-image-normal margin-top-24">
