--- a/about/index.html
+++ b/about/index.html
@@ -60,13 +60,13 @@
                     </h3>
                     <p>February 2021 - Present | Tehran, Iran</p>
                     <ul class="resume">
+                        <li>As the owner of the Design System, I am responsible for extending and maintaining it, and overseeing the designs to make sure they are aligned with it.</li>
                         <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
                         <li>Redesigned the Video Player and made accessibility a priority.</li>
                         <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
                         <li>Added the ability to allow users to request apps that weren't on Bazaar to reduce churn rate in the search funnel.</li>
                         <li>Redesigned the Profile page, adjusted its information architecture, and made the wallet and payment feature more visible and accessible.</li>
                         <li>Designed a Note Taking app to be used as a take home assignment in the hiring process for Android Team.</li>
-                        <li>Created a number of design components in our design system that were used throughout the application such as Search Lists and Spotlight, a row of promotional apps and games.</li>
                     </ul>
                 </section>
                 <section>
