Update resume, update chat

--- a/chat/index.html
+++ b/chat/index.html
@@ -118,7 +118,7 @@
                 </p>
             </article>
             <div class="work-image">
-                <img src="../assets/chat/predefind.png" alt="Problem Icon" />
+                <img src="../assets/chat/exploration.png" alt="Problem Icon" />
             </div>
         </div>
 
@@ -151,6 +151,7 @@
             <div class="work-image">
                 <img src="../assets/chat/results.png" alt="Sending Location" />
             </div>
+            <div class="subtitle">Passenger call rate</div>
         </div>
         <div class="pagination">
             <div class="pagination-content">
