Update resume and video

--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
                     </h3>
                     <p>February 2021 - Present | Tehran, Iran</p>
                     <ul class="resume">
-                        <li>As the owner of the Design System, I am responsible for extending and maintaining it, and overseeing the designs to make sure they are aligned with it.</li>
+                        <li>As the owner of the Design System, I am responsible for extending and maintaining it, and ensuring that designs are aligned with it.</li>
                         <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
                         <li>Redesigned the Video Player and made accessibility a priority.</li>
                         <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
