--- a/video/index.html
+++ b/video/index.html
@@ -41,60 +41,68 @@
     </nav>
 
     <main>
-        <article class="work-article padding-bottom-40">
-            <h2>Introduction</h2>
-            <p class="work-text">
-                Cafe Bazaar is the most popular smartphone application marketplace in Persian-speaking countries with over 40 million users.<br/>
-                This case study will mainly focus on how we identified ways to make the user experience more pleasant for the average user of Bazaar's Video service.
-            </p>
-        </article>
+        <div class="back-white">
+            <article class="work-article padding-bottom-40">
+                <h2>Introduction</h2>
+                <p class="work-text">
+                    Cafe Bazaar is an Android application marketplace with more than 40 million users. Formerly, Cafe Bazaar offered only apps and games, and recently it added a video service to its product line to expand its offering.<br/>
+                    Our biggest competitive advantage is the fact that we do not require a subscription fee and being free is a great user acquisition method since people are using it more and more each day.
+                </p>
+                <div class="work-image-normal">
+                    <img src="../assets/video/current.png" alt="Video" />
+                </div>
+            </article>
+        </div>
 
         <div class="back-gray">
             <article class="work-article">
-                <h2>My Role</h2>
+                <h2>Problem Statement</h2>
                 <p class="work-text">
-                    Since I was the only designer working on this project, I had to work closely with the respective Product Managers to create the best experience for our users based on business needs.<br/>
-                    As part of the design process, I first benchmarked different video streaming services (such as Netflix, Peacock, etc) to understand how we can improve on the current design.<br/>
-                    Then we planned the project to be done in multiple phases during all of which I had to work with two Product Managers, Backend, Mobile and Web Developers and the QA Team.<br/>
+                    When you open Netflix, you are presented with a lot of exciting options to check out and it shows promotional content based on your tastes and preferences. Bazaar, on the other hand, was not like that. It would just display rows of videos without any differentiation among them. Our watch-times were unsatisfactory, partly because users didn't finish videos that they began. The second problem was that due to the short time-to-market, the components were obtained from Apps and Games services. 
                 </p>
             </article>
+            <div class="work-image-narrow">
+                <img src="../assets/video/old-video.png" alt="Video" />
+            </div>
+            <article class="work-article">
+                <p class="work-text-normal">
+                    The player was also rudimentary, with just two settings. It was obtained from the Apps and Games section. Users were frustrated by the lack of options to choose quality, font size, and skip buttons.
+                </p>
+            </article>
+            <div class="work-image-narrow">
+                <img src="../assets/video/old-player.png" alt="Video" />
+            </div>
         </div>
 
         <div class="back-white">
             <article class="work-article">
-                <h2>Problem Statement</h2>
+                <h2>My Role</h2>
                 <p class="work-text">
-                    The video service is a new addition to Bazaar's platform, so the design of its components had not yet been customized for videos. Because of the short time-to-market, the components were taken from Apps and Games services, so I had to design new ones.<br/>
-                    Here is how the Video service looked before it was redesigned:
+                    Since I was the only designer working on this project, I worked closely with the respective Product Managers to create the best experience for our users based on business needs.<br/>
+                    As part of the design process, I first benchmarked competitors and different video streaming services (such as Filimo, Netflix, Peacock TV, etc) to understand how we can improve on the current design and where it falls compared to competitors.<br/>
+                    Then we planned the project to be done in multiple phases, obviously for sustaining the iterative cycle and refinement process. During all of the phases I worked with two Product Managers, Backend, Mobile and Web Developers and the QA Team.
                 </p>
             </article>
-            <div class="work-image-single">
-                <img src="../assets/video/old-design.jpg" alt="Video" />
-            </div>'
         </div>
 
         <div class="back-gray padding-bottom-0">
             <article class="work-article">
-                <h2>Benchmarking</h2>
-                <p class="work-text-normal">
-                    Initially, I benchmarked streaming services, and the first thing I understood was the importance of using large posters for movies and videos. I then noticed the impact the "Continue Watching" component could have on watch-time. The progress bar would make users to select on it and finish a video.
-                    <br/>
-                    <br/>
-                </p>
-            </article>
-        </div>
-
-        <div class="back-white padding-bottom-0">
-            <article class="work-article">
                 <h2>Exploration</h2>
                 <p class="work-text-normal">
-                    The design was done specifically for videos with alignment to our design system. Here are some of the iteration I made based on the benchmarking:
-                    <br/>
-                    <br/>
+                    These are the iteration for the main screens. The promotional content at the top is one of the major differences, in addition, the continue watching row is easy to understand and is different from the others. The progress bar can also indicate how much time is left in the video.<br/>
+                    Also tab bars have been added for content classification and better navigation.
                 </p>
             </article>
-            <div class="work-image margin-top-29"">
-                <img src="../assets/video/exploration-discovery.jpg" alt="Video" />
+            <div class="work-image-normal margin-top-29"">
+                <img src="../assets/video/exploration-main.png" alt="Video" />
+            </div>
+            <article class="work-article">
+                <p class="work-text-normal">
+                    These are the iteration for the player. With the new layout, the options are more accessible and the skip button is also present. According to the benchmarking that was done, one of the ways that was popular for engaging the users was to show suggestions at the end of the video, so I did the same to see if it affected the watch time.
+                </p>
+            </article>
+            <div class="work-image-normal margin-top-29"">
+                <img src="../assets/video/exploration-player.png" alt="Video" />
             </div>
         </div>
 
@@ -105,75 +113,49 @@
                     Since it can promote more than one video at the top, we chose this version. In addition, the continue watching component could cover the screen if the user only had one in that section. 
                 </p>
             </article>
-            <div class="work-image">
+            <div class="work-image-normal">
                 <img src="../assets/video/1.png" alt="Video" />
             </div>
-            <div class="work-image-normal">
-                <img src="../assets/video/2.png" alt="Video" />
-            </div>
-        </div>
-
-        <div class="back-white padding-bottom-0">
             <article class="work-article">
-                <h2>Categories, Livestream, and Coming Soon</h2>
                 <p class="work-text-normal">
-                    Our video service now offers three new screens:<br/>
-                    Video Categories: We display our video categories for you to quickly choose from.<br/>
-                    Livestream: It contains any kind of online broadcast, including sports, cooking shows, TV shows, and more.<br/>
-                    Coming Soon: A place where we will promote the videos we intend to release on the platform.<br/>
-                </p>
-            </article>
-            <div class="work-image margin-top-29">
-                <img src="../assets/video/5.png" alt="Video" />
-            </div>
-        </div>
-
-        <div class="back-gray padding-bottom-0">
-            <article class="work-article">
-                <h2>Increasing the Poster Size</h2>
-                <p class="work-text-normal">
-                    After the benchmarking, I found that people tend to remember movies and television shows by their posters rather than by their subheadings.<br/>
+                    I found that the movie posters were too small since the component was obtained from Apps and Games, and that people tend to remember movies and television shows by their posters rather than by their subheadings. Therefore, I made the posters larger than they were.<br/>
                     Additionally, by doing that, we decreased the cognitive load on users' minds by not showing so many posters simultaneously on each screen.
                 </p>
             </article>
-            <div class="work-image margin-top-29">
-                <img src="../assets/video/6.png" alt="Video" />
+
+            <div class="work-image-narrow">
+                <img src="../assets/video/2.png" alt="Video" />
             </div>
-        </div>
-
-        <div class="back-white padding-bottom-40">
             <article class="work-article">
-                <h2>Video Player</h2>
                 <p class="work-text-normal">
-                    Bazaar's video player was also rudimentary and needed to be updated with new features and new components. 
+                    Our video service now offers two new sections:<br/>
+                    <strong>Livestream:</strong> It contains any kind of online broadcast, including sports, cooking shows, TV shows, and more.
+                    <strong>Coming Soon:</strong> A place where we will promote the videos we intend to release on the platform.
                 </p>
             </article>
-        </div>
 
-        <div class="back-gray padding-bottom-40">
-            <article class="work-article">
-                <h2>Exploration</h2>
-                <p class="work-text-normal">
-                    Here are some of the iterations I did for the player:
-                    <br/>
-                    <br/>
-                </p>
-            </article>
-            <div class="work-image margin-top-29">
-                <img src="../assets/video/exploration-player.jpg" alt="Video" />
+            <div class="work-image-narrow">
+                <img src="../assets/video/3.png" alt="Video" />
             </div>
-        </div>
 
-        <div class="back-white padding-bottom-0">
             <article class="work-article">
-                <h2>Designs</h2>
                 <p class="work-text-normal">
-                    Comparing the new and old players, the new one is easier to use since the user can easily figure out what options we offer and select the right one.<br/>
-                    For instance, the title of the video has been added so that users can easily identify the content. Also you can now choose a series episode within the player or skip directly to the next one.
+                    For the player, this one is easier to use since the user can easily figure out what options we offer and select the right one. With this design of recommendations at the end, we can suggest more than one video and it’s easier to scroll through.
                 </p>
             </article>
-            <div class="work-image-normal margin-top-29">
-                <img src="../assets/video/8.png" alt="Video" />
+
+            <div class="work-image">
+                <img src="../assets/video/4.png" alt="Video" />
+            </div>
+
+            <article class="work-article">
+                <p class="work-text-normal">
+                    Two of the most requested features from users were the ability to choose quality of the video and save it as well as the ability to change the subtitle font size. These designs solve those problems.
+                </p>
+            </article>
+
+            <div class="work-image">
+                <img src="../assets/video/5.png" alt="Video" />
             </div>
         </div>
 
@@ -181,8 +163,8 @@
             <article class="work-article">
                 <h2>Results</h2>
                 <p class="work-text-normal">
-                    In addition to improving Video's consistency with other services, we can also expect to see watch-times increase as a result of the new design.<br/>
-                    Following the implementation of recommendations at the end of videos, engaging users watched 1 more video than before and 17 minutes more videos per day.
+                    In addition to improving Video's <strong>consistency</strong> with other services, the transformation has made our <strong>watch-times increase</strong> from 30 million minutes per day to <strong>33 million minutes</strong> as a result of the new design and the new contents on our platform.<br/>
+                    Following the implementation of recommendations at the end of videos, engaging users watched <strong>1 more video</strong> on average and 17 minutes more videos per day.
                 </p>
             </article>
         </div>
