Fix layout issue

--- a/video/index.html
+++ b/video/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <div class="back-white">
+        <div class="back-white padding-bottom-40">
             <article class="work-article">
                 <h2>My Role</h2>
                 <p class="work-text">
@@ -85,7 +85,7 @@
             </article>
         </div>
 
-        <div class="back-gray padding-bottom-0">
+        <div class="back-gray padding-bottom-40">
             <article class="work-article">
                 <h2>Exploration</h2>
                 <p class="work-text-normal">
