Update layout in video

--- a/video/index.html
+++ b/video/index.html
@@ -48,7 +48,7 @@
                     Cafe Bazaar is an Android application marketplace with more than 40 million users. Formerly, Cafe Bazaar offered only apps and games, and recently it added a video service to its product line to expand its offering.<br/>
                     Our biggest competitive advantage is the fact that we do not require a subscription fee and being free is a great user acquisition method since people are using it more and more each day.
                 </p>
-                <div class="work-image-normal">
+                <div class="work-image-h500">
                     <img src="../assets/video/current.png" alt="Video" />
                 </div>
             </article>
@@ -61,7 +61,7 @@
                     When you open Netflix, you are presented with a lot of exciting options to check out and it shows promotional content based on your tastes and preferences. Bazaar, on the other hand, was not like that. It would just display rows of videos without any differentiation among them. Our watch-times were unsatisfactory, partly because users didn't finish videos that they began. The second problem was that due to the short time-to-market, the components were obtained from Apps and Games services. 
                 </p>
             </article>
-            <div class="work-image-narrow">
+            <div class="work-image-h500">
                 <img src="../assets/video/old-video.png" alt="Video" />
             </div>
             <article class="work-article">
@@ -69,7 +69,7 @@
                     The player was also rudimentary, with just two settings. It was obtained from the Apps and Games section. Users were frustrated by the lack of options to choose quality, font size, and skip buttons.
                 </p>
             </article>
-            <div class="work-image-narrow">
+            <div class="work-image-h250">
                 <img src="../assets/video/old-player.png" alt="Video" />
             </div>
         </div>
@@ -93,7 +93,7 @@
                     Also tab bars have been added for content classification and better navigation.
                 </p>
             </article>
-            <div class="work-image-normal margin-top-29"">
+            <div class="work-image-w850 margin-top-29">
                 <img src="../assets/video/exploration-main.png" alt="Video" />
             </div>
             <article class="work-article">
@@ -101,7 +101,7 @@
                     These are the iteration for the player. With the new layout, the options are more accessible and the skip button is also present. According to the benchmarking that was done, one of the ways that was popular for engaging the users was to show suggestions at the end of the video, so I did the same to see if it affected the watch time.
                 </p>
             </article>
-            <div class="work-image-normal margin-top-29"">
+            <div class="work-image-w850 margin-top-29">
                 <img src="../assets/video/exploration-player.png" alt="Video" />
             </div>
         </div>
@@ -113,7 +113,7 @@
                     Since it can promote more than one video at the top, we chose this version. In addition, the continue watching component could cover the screen if the user only had one in that section. 
                 </p>
             </article>
-            <div class="work-image-normal">
+            <div class="work-image-h600">
                 <img src="../assets/video/1.png" alt="Video" />
             </div>
             <article class="work-article">
@@ -123,7 +123,7 @@
                 </p>
             </article>
 
-            <div class="work-image-narrow">
+            <div class="work-image-h600">
                 <img src="../assets/video/2.png" alt="Video" />
             </div>
             <article class="work-article">
@@ -134,7 +134,7 @@
                 </p>
             </article>
 
-            <div class="work-image-narrow">
+            <div class="work-image-h600">
                 <img src="../assets/video/3.png" alt="Video" />
             </div>
 
@@ -144,7 +144,7 @@
                 </p>
             </article>
 
-            <div class="work-image">
+            <div class="work-image-w850">
                 <img src="../assets/video/4.png" alt="Video" />
             </div>
 
@@ -154,7 +154,7 @@
                 </p>
             </article>
 
-            <div class="work-image">
+            <div class="work-image-w850">
                 <img src="../assets/video/5.png" alt="Video" />
             </div>
         </div>
@@ -164,7 +164,7 @@
                 <h2>Results</h2>
                 <p class="work-text-normal">
                     In addition to improving Video's <strong>consistency</strong> with other services, the transformation has made our <strong>watch-times increase</strong> from 30 million minutes per day to <strong>33 million minutes</strong> as a result of the new design and the new contents on our platform.<br/>
-                    Following the implementation of recommendations at the end of videos, engaging users watched <strong>1 more video</strong> on average and 17 minutes more videos per day.
+                    Following the implementation of recommendations at the end of videos, engaging users watched <strong>1 more video</strong> on average.
                 </p>
             </article>
         </div>
@@ -192,12 +192,12 @@
                 </div>
 
                 <a class="next-page" href="../change-dest/">
-                Snapp! Change Destination Feature
-                <div class="arrow">
-                    <div></div>
-                    <div></div>
-                </div>
-            </a>
+                    Snapp! Change Destination Feature
+                    <div class="arrow">
+                        <div></div>
+                        <div></div>
+                    </div>
+                </a>
             </div>
         </div>
     </main>
