Finalize video design

--- a/video/index.html
+++ b/video/index.html
@@ -41,17 +41,17 @@
     </nav>
 
     <main>
-        <div class="back-white">
-            <article class="work-article padding-bottom-40">
+        <div class="back-white padding-bottom-40">
+            <article class="work-article">
                 <h2>Introduction</h2>
                 <p class="work-text">
                     Cafe Bazaar is an Android application marketplace with more than 40 million users. Formerly, Cafe Bazaar offered only apps and games, and recently it added a video service to its product line to expand its offering.<br/>
                     Our biggest competitive advantage is the fact that we do not require a subscription fee and being free is a great user acquisition method since people are using it more and more each day.
                 </p>
-                <div class="work-image-h500">
-                    <img src="../assets/video/current.png" alt="Video" />
-                </div>
             </article>
+            <div class="work-image-h500">
+                <img src="../assets/video/current.png" alt="Video" />
+            </div>
         </div>
 
         <div class="back-gray">
@@ -144,7 +144,7 @@
                 </p>
             </article>
 
-            <div class="work-image-w850">
+            <div class="work-image-w1000">
                 <img src="../assets/video/4.png" alt="Video" />
             </div>
 
@@ -154,7 +154,7 @@
                 </p>
             </article>
 
-            <div class="work-image-w850">
+            <div class="work-image-w1000">
                 <img src="../assets/video/5.png" alt="Video" />
             </div>
         </div>
