Update location to Amsterdam

--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
                     <h3>
                         <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
                     </h3>
-                    <p>February 2021 - Present | Tehran, Iran</p>
+                    <p>February 2021 - Present | Amsterdam, Netherlands (Remote) </p>
                     <ul class="resume">
                         <li>As the owner of the Design System, I am responsible for extending and maintaining it, and ensuring that designs are aligned with it.</li>
                         <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
@@ -112,7 +112,7 @@
                 <h2>Education</h2>
                 <section>
                     <p>Azad University <br/> Central Tehran Branch</p>
-                    <h3>Bachelor’s Degree, <br/> Graphic Design</h3>
+                    <h3>Bachelor’s Degree, <br/> Visual Communication</h3>
                     <p>2013 - 2017 | Tehran, Iran</p>
                 </section>
             </article>
