Fix minor issue with location

--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,8 @@
         <header class="about-header">
             <div class="about-content">
                 <h1>Always learning, growing, and pushing</h1>
-                <p>I’m Tannaz, a product designer based in Iran, currently working at Cafe Bazaar, designing the video's experience and everything in-between.
+                <p>
+                    I’m Tannaz, a product designer based in the Netherlands, currently working remotely for Cafe Bazaar, designing the video’s experience and everything in-between.
                 </p>
                 <br/>
                 <p>
