Add Beat to resume

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
             <div class="about-content">
                 <h1>Always learning, growing, and pushing</h1>
                 <p>
-                    I’m Tannaz, a product designer based in the Netherlands, currently working remotely for Cafe Bazaar, designing the video’s experience and everything in-between.
+                    I’m Tannaz, a product designer based in the Netherlands, currently working at Beat, designing the passenger’s experience.
                 </p>
                 <br/>
                 <p>
@@ -57,9 +57,20 @@
                 <section>
                     <p>Product Designer</p>
                     <h3>
+                        <a href="https://thebeat.co" target="_blank">Beat</a>
+                    </h3>
+                    <p>December 2021 - Present | Amsterdam, Netherlands</p>
+                    <ul class="resume">
+                        <li>Working on the foundations of the design system as a member of the design system team.</li>
+                        <li>Increasing passenger pick-up accuracy to reduce cancellations.</li>
+                    </ul>
+                </section>
+                <section>
+                    <p>Product Designer</p>
+                    <h3>
                         <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
                     </h3>
-                    <p>February 2021 - Present | Amsterdam, Netherlands (Remote) </p>
+                    <p>February 2021 - December 2021 | Tehran, Iran </p>
                     <ul class="resume">
                         <li>As the owner of the Design System, I am responsible for extending and maintaining it, and ensuring that designs are aligned with it.</li>
                         <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
