--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div>
                 <h1>Hello, I’m Tannaz!</h1>
                 <p>
-                    A product designer based in the Netherlands, currently working remotely for Cafe Bazaar, designing the video’s experience and everything in-between.
+                    A product designer based in the Netherlands, currently working at Beat, designing the passenger’s experience.
                 </p>
             </div>
         </header>
