Add Beat to works

--- a/beat/index.html
+++ b/beat/index.html
@@ -14,11 +14,11 @@
     <link rel="icon" type="image/png" href="../assets/favicon.png" />
 </head>
 
-<body class="vouchers">
-
+<body class="beat">
     <div class="work-container">
         <div class="work-header">
-            <h1>Snapp! Voucher and Rewards Feature
+            <h1>
+                Beat Pickup Experience Improvement
             </h1>
             <img src="../assets/vouchers/pic.png" alt="Voucher Header Picture" />
         </div>
