--- a/chat/index.html
+++ b/chat/index.html
@@ -165,8 +165,8 @@
 
                 <div class="padding"></div>
 
-                <a class="next-page" href="../vouchers/">
-                Snapp! Voucher and Rewards Feature
+                <a class="next-page" href="../beat/">
+                    Beat Pickup Experience Improvement
                 <div class="arrow">
                     <div></div>
                     <div></div>
