--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
         </header>
 
         <article class="work-sample">
+            <a href="beat" class="link">
+                <div class="image-box">
+                    <img class="image-colored" src="assets/works/beat-colored.png" alt="Beat Pickup Improvement" />
+                    <img class="image-gray" src="assets/works/beat.png" alt="Beat Pickup Improvement" />
+                    <div class="hidden">
+                        <img src="assets/works/beat.png" alt="Beat Pickup Improvement" />
+                    </div>
+                </div>
+                <div class="sample-title">
+                    <h2>Beat Pickup Experience Improvement</h2>
+                    <div class="read-more">
+                        Read more
+                        <div class="arrow">
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </article>
+
+        <article class="work-sample">
             <a href="video" class="link">
                 <div class="image-box">
                     <img class="image-colored" src="assets/works/video-colored.png" alt="Video Photo" />
@@ -102,28 +124,6 @@
                 </div>
                 <div class="sample-title">
                     <h2>Snapp! Chat Module Feature</h2>
-                    <div class="read-more">
-                        Read more
-                        <div class="arrow">
-                            <div></div>
-                            <div></div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </article>
-
-        <article class="work-sample">
-            <a href="vouchers" class="link">
-                <div class="image-box">
-                    <img class="image-colored" src="assets/works/vouchers-colored.png" alt="Change Destination Photo" />
-                    <img class="image-gray" src="assets/works/vouchers.png" alt="Change Destination Photo" />
-                    <div class="hidden">
-                        <img src="assets/works/vouchers.png" alt="Change Destination Photo" />
-                    </div>
-                </div>
-                <div class="sample-title">
-                    <h2>Snapp! Voucher and Rewards Feature</h2>
                     <div class="read-more">
                         Read more
                         <div class="arrow">
