--- a/video/index.html
+++ b/video/index.html
@@ -180,12 +180,12 @@
 
         <div class="pagination">
             <div class="pagination-content">
-                <a class="prev-page" href="../vouchers/">
+                <a class="prev-page" href="../beat/">
                     <div class="arrow">
                         <div></div>
                         <div></div>
                     </div>
-                    Snapp! Voucher and Rewards Feature
+                    Beat Pickup Experience Improvement
                 </a>
 
                 <div class="padding">
