--- a/about/index.html
+++ b/about/index.html
@@ -34,100 +34,28 @@
     <main class="main">
         <header class="about-header">
             <div class="about-content">
-                <h1>Always learning, growing, and pushing</h1>
                 <p>
-                    I’m Tannaz, a product designer based in the Netherlands, currently working at Beat, designing the passenger’s experience.
+                    Howdy! 👋
+                </p>
+                <p>
+                    I’m Tannaz, a product designer born and raised in Iran and based in the Netherlands. I’m currently working at Beat, designing the passenger’s experience. Before this, I was working at Cafe Bazaar, which is like the Google Play Store of Iran. I also worked at Snapp!, which is an Iranian ride hailing app and the biggest one in the Middle East.
                 </p>
                 <br/>
                 <p>
-                    I am a self-motivated designer who is always looking for new challenges and opportunities that can help me continue to develop and grow as a designer.
+                    It's always been my goal to learn new skills and expand my horizons. I love to work alongside hard-working, inspirational, and experienced designers in the industry. For me, as a person and designer, that is one of the most effective ways to learn and grow.
                 </p>
                 <br/>
                 <p>
-                    I’m eager to learn new skills and to push my boundaries through experimentation and exploration based on user research and working alongside hardworking, inspiring, and experienced people in the industry.
+                    When I’m not designing, I can be found making a mess in the kitchen, watching Formula 1, or traveling across the Netherlands to go to noisy concerts. 
+                </p>
+                <br/>
+                <p>
+                    Here is my <a href="../resume/TannazSadeghi-Resume.pdf">resume</a> if you're interested in learning more about my previous experiences.
                 </p>
             </div>
             <div class="tannaz-real">
                 <img src="../assets/tannaz-real.png" id="portrait" alt="Tannaz Real" />
             </div>
-        </header>
-        <div class="content">
-            <article class="experience">
-                <h2>Experience</h2>
-                <section>
-                    <p>Product Designer</p>
-                    <h3>
-                        <a href="https://thebeat.co" target="_blank">Beat</a>
-                    </h3>
-                    <p>December 2021 - Present | Amsterdam, Netherlands</p>
-                    <ul class="resume">
-                        <li>Working on the foundations of the design system as a member of the design system team.</li>
-                        <li>Increasing passenger pick-up accuracy to reduce cancellations.</li>
-                    </ul>
-                </section>
-                <section>
-                    <p>Product Designer</p>
-                    <h3>
-                        <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
-                    </h3>
-                    <p>February 2021 - December 2021 | Tehran, Iran </p>
-                    <ul class="resume">
-                        <li>As the owner of the Design System, I am responsible for extending and maintaining it, and ensuring that designs are aligned with it.</li>
-                        <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
-                        <li>Redesigned the Video Player and made accessibility a priority.</li>
-                        <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
-                        <li>Added the ability to allow users to request apps that weren't on Bazaar to reduce churn rate in the search funnel.</li>
-                        <li>Redesigned the Profile page, adjusted its information architecture, and made the wallet and payment feature more visible and accessible.</li>
-                        <li>Designed a Note Taking app to be used as a take home assignment in the hiring process for Android Team.</li>
-                    </ul>
-                </section>
-                <section>
-                    <p>Product Designer</p>
-                    <h3>
-                        <a href="https://snapp.ir/about" target="_blank">Snapp!</a>
-                    </h3>
-                    <p>September 2019 - February 2021 | Tehran, Iran</p>
-                    <ul class="resume">
-                        <li>Conducted usability tests, A/B tests and user interviews to understand user needs and effectiveness of product and iterated based on the results.</li>
-                        <li>Checked Call Center’s user problems sheet alongside product managers to gather what users wanted and came up with solutions for the product roadmap.</li>
-                        <li>Documented and maintained the Design System for Snapp! products.</li>
-                        <li>Participated in the Passenger redesign project by enhancing the experience, interface, and helping developers with animations and prototypes.</li>
-                        <li>Designed Change Destination feature in passenger app which resulted in a 2% reduction in daily Call Center calls.</li>
-                        <li>Revamped the login flow of the app which increased acquisition by 12%.</li>
-                        <li>Redesigned the Corporate Panel, which led to increase B2B usage by 15%.</li>
-                        <li>Dropped ride cancellation rate by repositioning cancel button by 1%.</li>
-                    </ul>
-                </section>
-                <section>
-                    <p>Product Designer</p>
-                    <h3>
-                        <a href="http://www.hamisystem.ir/?locale=en" target="_blank">Hami System Sharif</a>
-                    </h3>
-                    <p>July 2018 - August 2019 | Tehran, Iran </p>
-                    <ul class="resume">
-                        <li>Designed and prototyped a completely new UI for Hamrah-e-Avval’s App.</li>
-                        <!-- <li>Designed the flows and interfaces for the website, application, and panel of the Central Security Depository of Iran (CSDI) through analysis, iteration and working directly with PMs.</li> -->
-                    </ul>
-                </section>
-                <section>
-                    <p>Freelance Designer</p>
-                    <h3>
-                        Different Clients
-                    </h3>
-                    <p>April 2016 - August 2018 | Tehran, Iran </p>
-                    <ul class="resume">
-                        <li>Designed websites, book covers, posters, and brochures for a variety of clients.</li>
-                    </ul>
-                </section>
-            </article>
-            <article class="education">
-                <h2>Education</h2>
-                <section>
-                    <p>Azad University <br/> Central Tehran Branch</p>
-                    <h3>Bachelor’s Degree, <br/> Visual Communication</h3>
-                    <p>2013 - 2017 | Tehran, Iran</p>
-                </section>
-            </article>
         </div>
     </main>
 
